--- a/index.html
+++ b/index.html
@@ -30,7 +30,23 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+
     </div>
+
+    <!-- Layout Grid -->
+  <div class="container">
+    <div class="row">
+        <div class="col-md-3">
+          <p>Hour</p>
+        </div>
+        <div class="col-md-6">
+          <p>Task</p>
+        </div>
+        <div class="col-md-3">
+          <p>Save</p>
+        </div>
+    </div>
+  </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
