--- a/index.html
+++ b/index.html
@@ -40,12 +40,20 @@
           <p>Hour</p>
         </div>
         <div class="col-md-6">
-          <p>Task</p>
-        </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <label for="description"></label>
+                <textarea class="form-control" id="description" rows="2">
+                </textarea>
+              </div>
+              </form>
+          </div>
         <div class="col-md-3">
           <p>Save</p>
         </div>
     </div>
+  </div>
   </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
