--- a/index.html
+++ b/index.html
@@ -30,30 +30,101 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      
 
     </div>
 
     <!-- Layout Grid -->
   <div class="container">
-    <div class="row">
+    <div class="row" id="hour-9">
         <div class="col-md-3">
-          <p>Hour</p>
+          <p>9:00 AM</p>
         </div>
-        <div class="col-md-6">
-          <div class="modal-body">
-            <form>
-              <div class="form-group">
-                <label for="description"></label>
-                <textarea class="form-control" id="description" rows="2">
-                </textarea>
-              </div>
-              </form>
-          </div>
-        <div class="col-md-3">
-          <p>Save</p>
-        </div>
+        <textarea class="col-md-6 description" placeholder="text here"></textarea>
+        <button class="col-md-3 saveBtn">
+          Save
+        </button>
     </div>
+
+    <div class="row" id="hour-10">
+      <div class="col-md-3">
+        <p>10:00 AM</p>
+      </div>
+      <textarea class="col-md-6 description" placeholder="text here"></textarea>
+      <button class="col-md-3 saveBtn">
+        Save
+      </button>
   </div>
+
+  <div class="row" id="hour-11">
+    <div class="col-md-3">
+      <p>11:00 AM</p>
+    </div>
+    <textarea class="col-md-6 description" placeholder="text here"></textarea>
+    <button class="col-md-3 saveBtn">
+      Save
+    </button>
+</div>
+
+<div class="row" id="hour-12">
+  <div class="col-md-3">
+    <p>12:00 PM</p>
+  </div>
+  <textarea class="col-md-6 description" placeholder="text here"></textarea>
+  <button class="col-md-3 saveBtn">
+    Save
+  </button>
+</div>
+
+<div class="row" id="hour-1">
+  <div class="col-md-3">
+    <p>1:00 PM</p>
+  </div>
+  <textarea class="col-md-6 description" placeholder="text here"></textarea>
+  <button class="col-md-3 saveBtn">
+    Save
+  </button>
+</div>
+
+<div class="row" id="hour-2">
+  <div class="col-md-3">
+    <p>2:00 PM</p>
+  </div>
+  <textarea class="col-md-6 description" placeholder="text here"></textarea>
+  <button class="col-md-3 saveBtn">
+    Save
+  </button>
+</div>
+
+<div class="row" id="hour-3">
+  <div class="col-md-3">
+    <p>3:00 PM</p>
+  </div>
+  <textarea class="col-md-6 description" placeholder="text here"></textarea>
+  <button class="col-md-3 saveBtn">
+    Save
+  </button>
+</div>
+
+<div class="row" id="hour-4">
+  <div class="col-md-3">
+    <p>4:00 PM</p>
+  </div>
+  <textarea class="col-md-6 description" placeholder="text here"></textarea>
+  <button class="col-md-3 saveBtn">
+    Save
+  </button>
+</div>
+
+<div class="row" id="hour-5">
+  <div class="col-md-3">
+    <p>5:00 PM</p>
+  </div>
+  <textarea class="col-md-6 description" placeholder="text here"></textarea>
+  <button class="col-md-3 saveBtn">
+    Save
+  </button>
+</div>
   </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
