--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- Layout Grid -->
   <div class="container">
     <div class="row" id="hour-9">
-        <div class="col-md-3">
+        <div class="col-md-3 time">
           <p>9:00 AM</p>
         </div>
         <textarea class="col-md-6 description" placeholder="text here"></textarea>
@@ -47,7 +47,7 @@
     </div>
 
     <div class="row" id="hour-10">
-      <div class="col-md-3">
+      <div class="col-md-3 time">
         <p>10:00 AM</p>
       </div>
       <textarea class="col-md-6 description" placeholder="text here"></textarea>
@@ -57,7 +57,7 @@
   </div>
 
   <div class="row" id="hour-11">
-    <div class="col-md-3">
+    <div class="col-md-3 time">
       <p>11:00 AM</p>
     </div>
     <textarea class="col-md-6 description" placeholder="text here"></textarea>
@@ -67,7 +67,7 @@
 </div>
 
 <div class="row" id="hour-12">
-  <div class="col-md-3">
+  <div class="col-md-3 time">
     <p>12:00 PM</p>
   </div>
   <textarea class="col-md-6 description" placeholder="text here"></textarea>
@@ -77,7 +77,7 @@
 </div>
 
 <div class="row" id="hour-1">
-  <div class="col-md-3">
+  <div class="col-md-3 time">
     <p>1:00 PM</p>
   </div>
   <textarea class="col-md-6 description" placeholder="text here"></textarea>
@@ -87,7 +87,7 @@
 </div>
 
 <div class="row" id="hour-2">
-  <div class="col-md-3">
+  <div class="col-md-3 time">
     <p>2:00 PM</p>
   </div>
   <textarea class="col-md-6 description" placeholder="text here"></textarea>
@@ -97,7 +97,7 @@
 </div>
 
 <div class="row" id="hour-3">
-  <div class="col-md-3">
+  <div class="col-md-3 time">
     <p>3:00 PM</p>
   </div>
   <textarea class="col-md-6 description" placeholder="text here"></textarea>
@@ -107,7 +107,7 @@
 </div>
 
 <div class="row" id="hour-4">
-  <div class="col-md-3">
+  <div class="col-md-3 time">
     <p>4:00 PM</p>
   </div>
   <textarea class="col-md-6 description" placeholder="text here"></textarea>
@@ -117,7 +117,7 @@
 </div>
 
 <div class="row" id="hour-5">
-  <div class="col-md-3">
+  <div class="col-md-3 time">
     <p>5:00 PM</p>
   </div>
   <textarea class="col-md-6 description" placeholder="text here"></textarea>
@@ -129,5 +129,6 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
